# obstacle_removal

./: CMakeLists.txt  CMakeLists.txt~  package.xml
launch/: obstacle_removal.launch
src/: camera+image_tf_publisher.cpp  obstacle_detection_debug.cpp  obstacle_removal_debug.cpp
